--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "type": "git",
     "url": "git+https://github.com/ChoMihyang/wetube-reloaded.git"
   },
+  "scripts": {
+    "win": "node index.js"
+  },
   "author": "CMH",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ChoMihyang/wetube-reloaded/issues"
   },
-  "homepage": "https://github.com/ChoMihyang/wetube-reloaded#readme"
+  "homepage": "https://github.com/ChoMihyang/wetube-reloaded#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
